fix overflow

--- a/static/style.css
+++ b/static/style.css
@@ -33,21 +33,12 @@
 /*  contains all the items, it's the
     root container */
 .main_container{
-    overflow:scroll;
+    overflow-y:scroll;
     position:relative;
 
-    display: flex;
-    /* main direction */
-    flex-direction: row;
-    /* multiple line */
-    flex-wrap: wrap;
-    /* alignment along main axes */
+    display:flex;
     justify-content: center;
-    /* alignment along cross axis */
-    align-items: center;
-    /*This aligns a flex container’s lines 
-    within when there is extra space in the cross-axis */
-    align-content: center;
+    flex-wrap: wrap;
 
     height: 80%;
     width: 100%;
@@ -82,6 +73,7 @@
 
     width:200px;
     height: 200px;
+    align-self: center;
 
     text-align: center;
 }
@@ -142,7 +134,7 @@
     display: none;/*flex*/
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: stretch;
+    align-self: center;
 }
 /*  single action that can be
     performed on an item */
